# flight-delay-estimation

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  pyproject.toml  requirements.txt
informe/: Makefile  bibliography.bib  compile.sh  exp-depdelay-ardelay.tex  exp-otp-delay.tex  informe.tex  sec-abstract.tex  sec-desarrollo.tex  sec-experimentacion.tex  sec-introduccion-teorica.tex
notebooks/: 911preds.ipynb  categories.ipynb  cml.py  daily_monthly_cancellation.ipynb  daily_monthly_delay.ipynb  depdelay-vs-arrdelay.ipynb  distance vs delay.ipynb  dls_and_cxls.ipynb  monthly_delay.ipynb  monthly_delay_old_with_cpp_impl.ipynb  template.ipynb
notebooks/tmp_csv/airports/: cut.csv  full.csv  top_airports.csv
notebooks/tmp_csv/airports_depdelay/: cut.csv  full.csv
notebooks/tmp_csv/carriers/: cut.csv  full.csv  top_carriers.csv
notebooks/tmp_csv/carriers_depdelay/: cut.csv  full.csv
notebooks/tmp_csv/cities/: cut.csv  full.csv  top_cities.csv
notebooks/tmp_csv/cities/.ipynb_checkpoints/: cut-checkpoint.csv  full-checkpoint.csv
notebooks/tmp_csv/cities_delay/: cut.csv  full.csv
notebooks/tmp_csv/daily/: 1994.csv  1995.csv  1996.csv  1997.csv  1998.csv  1999.csv  2000.csv  2001.csv  2002.csv  2003.csv  2004.csv  2005.csv  2006.csv  2007.csv  2008.csv  cut.csv  full.csv
notebooks/tmp_csv/monthly/: 1994.csv  1995.csv  1996.csv  1997.csv  1998.csv  1999.csv  2000.csv  2001.csv  2002.csv  2003.csv  2004.csv  2005.csv  2006.csv  2007.csv  2008.csv  cut.csv  full.csv
src/: cml-impl.h  cml.cpp  modeleval.py  reader.py
tools/: download-data.sh
